Adapted docker compose setup, so that setupDb is execute on maria db on startup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - MARIADB_DATABASE=boutique_hotel_technikum
     volumes:
       - botique-hotel-db-vol:/var/lib/mysql
+      - ./mariadb-setup-scripts/:/docker-entrypoint-initdb.d/
   adminer:
     image: adminer
     ports:
