Added pinia, axios package, Added RoomsItem component for roms page

--- a/boutiqueHotelTechnikumAdFrontend/package.json
+++ b/boutiqueHotelTechnikumAdFrontend/package.json
@@ -19,7 +19,9 @@
     "@capacitor/status-bar": "6.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "axios": "^1.7.2",
     "ionicons": "^7.0.0",
+    "pinia": "^2.1.7",
     "sass": "^1.77.4",
     "swiper": "^11.1.4",
     "vue": "^3.3.0",
