--- a/boutiqueHotelTechnikumAdBackend/src/main/resources/application.properties
+++ b/boutiqueHotelTechnikumAdBackend/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
