--- a/boutiqueHotelTechnikumAdFrontend/package.json
+++ b/boutiqueHotelTechnikumAdFrontend/package.json
@@ -21,6 +21,7 @@
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
     "sass": "^1.77.4",
+    "swiper": "^11.1.4",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
